Correct team ranking menu item

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -160,7 +160,7 @@
     <div id="app"  class="content">
         <div class="menu" id="menu">
             <router-link to="/overview">overview</router-link>
-            <router-link to="/ranking">team ranking</router-link>
+            <router-link to="/team-ranking">team ranking</router-link>
             <router-link to="/team-stats">team stats</router-link>
             <router-link to="/player-ranking">player ranking</router-link>
             <router-link to="/player-stats">player stats</router-link>
