Fix overall style due to grid override

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -15,6 +15,11 @@
             letter-spacing: .05em
         }
 
+        div {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            letter-spacing: .05em
+        }
+
         h1 {
             letter-spacing: .1em;
             font-weight: 100
