Update player rating

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -213,8 +213,7 @@
             </p>
             <h3>Player rating</h3>
             <p class="note">
-                The player rating does <b>not</b> use the elo rating system. Instead it is using the following formula:
-                <pre class="note">Player rating = 10000 * (winRatio * participationRatio)</pre>
+                The player rating is based on the team rating: when a player's team is increased by x points each player's rating is increased with the same amount, and vica versa.
             </p>
         </div>
 
