Only include players with 10 games or more in the player ranking

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -50,7 +50,7 @@
         }
 
         .note {
-            color: #AAAAAA;
+            color: #777777;
         }
 
         pre.note {
@@ -214,6 +214,9 @@
             <h3>Player rating</h3>
             <p class="note">
                 The player rating is based on the team rating: when a player's team is increased by x points each player's rating is increased with the same amount, and vica versa.
+            </p>
+            <p class="note">
+                Only players with 10 games or more are included in the ranking.
             </p>
         </div>
 
