Explained player ranking

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -213,10 +213,10 @@
             </p>
             <h3>Player rating</h3>
             <p class="note">
-                The player rating is based on the team rating: when a player's team is increased by x points each player's rating is increased with the same amount, and vica versa.
+                The individual player rating uses the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" in a similar way as the Team Rating.
             </p>
             <p class="note">
-                Only players with 10 games or more are included in the ranking.
+                Instead of comparing both team ratings, the combined average individual rating of both team members is used. Then the individual rating of each player is adjusted by the same amount, according to the elo calculation.
             </p>
         </div>
 
