--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -159,6 +159,19 @@
             }
         }
     </style>
+    <!-- Additional pure css -->
+    <style>
+        .pure-button {
+            color: white;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+            background: #A9A9A9;
+        }
+
+        .button-small {
+            font-size: 85%;
+        }
+    </style>
     <script>
         function myFunction() {
             var x = document.getElementById("menu");
