Show delta in ratings history

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -129,6 +129,13 @@
                 }
         }
     </style>
+    <!-- Specific styling -->
+    <style>
+        .ratingDelta {
+            font-weight: bold;
+            margin-right: .5em;
+        }
+    </style>
     <!-- Github ribbon -->
     <style>
         .github-corner:hover .octo-arm {
