Add global stats

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -26,12 +26,14 @@
         }
 
         h2 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             letter-spacing: .1em;
             font-weight: 100;
             margin-top: 2em;
         }
 
         h3 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             letter-spacing: .1em;
             font-weight: 100;
             margin-top: 2em;
@@ -192,7 +194,7 @@
 </head>
 <body>
 
-    <div id="app"  class="content">
+    <div id="app" class="content">
         <div class="menu" id="menu">
             <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
                 <i class="fa fa-bars"></i>
