--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -63,6 +63,11 @@
             color: #888888;
         }
 
+        .leader {
+            font-size: xx-large;
+            font-weight: bold;
+        }
+
         .menu {
             overflow: hidden;
             line-height: 5em;
