Emphasize the streaks in the overview

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -68,6 +68,12 @@
             font-weight: bold;
         }
 
+        .streak {
+            font-size: xx-large;
+            font-weight: bold;
+            margin-right: .5em;
+        }
+
         .menu {
             overflow: hidden;
             line-height: 5em;
