--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -62,6 +62,11 @@
             color: #888888;
         }
 
+        .small-note {
+            color: #AAAAAA;
+            font-style: italic;
+        }
+
         .leader {
             font-size: xx-large;
             font-weight: bold;
