Add player details page (unfinished)

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -67,6 +67,12 @@
             font-style: italic;
         }
 
+        .stat-number {
+            font-size: xx-large;
+            font-weight: bold;
+            margin-right: .5em;
+        }
+
         .leader {
             font-size: xx-large;
             font-weight: bold;
