Introduce ES6 Modules

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -305,8 +305,8 @@
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
     <script src="js/statsDataService.js"></script>
-    <script src="js/analysis.js"></script>
+    <script src="js/analysis.js" type="module"></script>
 
-    <script src="js/app-vue.js"></script>
+    <script src="js/app-vue.js" type="module"></script>
 </body>
 </html>
