--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -51,6 +51,12 @@
             margin-right: 2em;
         }
 
+        .footer {
+            text-align: center;
+            margin-top: 5em;
+            margin-bottom: 4em;
+        }
+
         .note {
             color: #777777;
         }
@@ -236,6 +242,7 @@
             <router-link to="/player-ranking" onclick="toggleMenu()">player ranking</router-link>
             <router-link to="/player-stats" onclick="toggleMenu()">player stats</router-link>
             <router-link to="/game-history" onclick="toggleMenu()">game history</router-link>
+            <router-link to="/about" onclick="toggleMenu()">about</router-link>
         </div>
 
         <div>
@@ -249,51 +256,15 @@
 
             <router-view v-if="!loading" @refresh-data="refreshData" :app="$data" :stats="analysis.stats" :rawdata="analysis.rawData"></router-view>
         </div>
-    </div>
 
-
-    <div class="content">
-        <h2><a name="ratingInfo">Rating info</a></h2>
-        <div>
-            <h3>Team rating</h3>
-            <p class="note">
-                The rating is calculated using the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" algorithm. In the chart it is rounded to an integer.
-            </p>
-            <p class="note">
-                Based on the rating of two teams, it calculates the expected result, compares it to the actual result and adjusts the ratings accordingly. This means winning from a team with a higher rating than you is more benificial than winning from a team with a lower rating.
-            </p>
-            <p class="note">
-                The expected result is a value between 0 and 1. But in the case of kicker, a game has four possible results per team:
-                <ul class="note">
-                    <li>1.00: Clean win (10 - 0)</li>
-                    <li>0.75: Win</li>
-                    <li>0.25: Loss</li>
-                    <li>0.00: Clean loss (0 - 10)</li>
-                </ul>
-            </p>
-            <p class="note">
-                More information: <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Wikipedia: Elo rating system</a>
-            </p>
-            <h3>Player rating</h3>
-            <p class="note">
-                The individual player rating uses the "<a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo Rating</a>" in a similar way as the Team Rating.
-            </p>
-            <p class="note">
-                Instead of comparing both team ratings, the combined average individual rating of both team members is used. Then the individual rating of each player is adjusted by the same amount, according to the elo calculation.
-            </p>
-        </div>
-
-        <h2><a name="positionInfo">Best position</a></h2>
-        <div>
-            <p class="note">
-                If teams where the player is keeper perform better on average, then the best position is keeper.
-            </p>
-            <p class="note">
-                If teams where the player is striker perform better on average, then the best position is striker.
-            </p>
-            <p class="note">
-                "Performance" is the average rating of those teams, shown in brackets in the table.
-            </p>
+        <div class="footer">
+            <div>
+                Copyright {{ new Date().getFullYear() }} Aaron Lenoir
+                -
+                Released under  (<a href="https://github.com/AaronLenoir/kicker/blob/master/LICENSE">MIT License</a>)
+                -
+                Source code: <a href="https://github.com/AaronLenoir/kicker">https://github.com/AaronLenoir/kicker</a>
+            </div>
         </div>
     </div>
 
