--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -73,6 +73,10 @@
             font-style: italic;
         }
 
+        .stat h3 {
+            margin-bottom: 0px;
+        }
+
         .stat-number {
             font-size: xx-large;
             font-weight: bold;
