--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -283,7 +283,7 @@
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 
     <script src="js/statsDataService.js"></script>
-    <script src="js/analysis.js"></script>
+    <script src="js/kicker-analysis.js"></script>
 
     <script src="js/app-vue.js"></script>
 </body>
