Implement true elo-rating

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -183,6 +183,12 @@
                     text-align: left;
                 }
         }
+
+        .math {
+            font-style: italic;
+            color: #777777;
+            font-family:Georgia,"Times New Roman",Times,serif;
+        }
     </style>
     <!-- Specific styling -->
     <style>
