Add switch to show 2020 stats

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -276,7 +276,7 @@
         </h1>
 
         <div class="yearPicker">
-            Show stats for: <a href="#" v-on:click="changeYear(2019)">2019</a>, <a href="#" v-on:click="changeYear('all', 'All Time')">All time</a>
+            Show stats for: <a href="#" v-on:click="changeYear(2020)">2020</a>, <a href="#" v-on:click="changeYear(2019)">2019</a>, <a href="#" v-on:click="changeYear('all', 'All Time')">All time</a>
         </div>
 
         <div>
