Change "no data found" message

--- a/src/Kicker.Stats/wwwroot/index.html
+++ b/src/Kicker.Stats/wwwroot/index.html
@@ -274,7 +274,7 @@
 
             <span v-if="!refreshing" v-on:click="refreshData" class="refresh-button" title="Refresh data ...">&#8635;</span>
 
-            <span v-if="noDataFound" title="No data found">(no data found)</span>
+            <span v-if="noDataFound" title="No games found">(no games found)</span>
         </h1>
 
         <div class="yearPicker">
